Potnetial fix for parallax on mobile

--- a/WEO_Demo/wwwroot/css/site.css
+++ b/WEO_Demo/wwwroot/css/site.css
@@ -384,6 +384,11 @@ body {
     background-position: center;
     background-size: cover;
 }
+@media screen and (max-width: 1000px){
+    .parallax-container{
+        background-attachment: initial;
+    }
+}
 
 .quote-container {
     display: flex;
